--- a/style.css
+++ b/style.css
@@ -198,6 +198,9 @@ main {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+.main_img > p > a {
+    color: black;
+}
 
 .help {
     padding: 32px 0;
